--- a/index.html
+++ b/index.html
@@ -5,20 +5,60 @@
         <title>RockPaperScissors</title>
     </head>
     <script>
-        var Ai
-        function getComputerChoice(){
-            let a = Math.random;
-            if (a < 0.3 || a == 0.3){
-                Ai = "rock"
-            }else if (a > 0.6 || a == 0.6){
-                Ai = "scissors"
-            }else{
-                Ai = "paper"
-            }
-        }
-        getComputerChoice()
+var Ai;
+var humanChoice;
+var humanScore = 0;
+var computerScore = 0;
 
-        console.log(Ai)
+function getComputerChoice() {
+    let a = Math.random();
+    if (a < 0.3) {
+        Ai = "rock";
+    } else if (a > 0.6) {
+        Ai = "scissors";
+    } else {
+        Ai = "paper";
+    }
+}
+
+function getHumanChoice() {
+    humanChoice = prompt("Your choice (rock, paper, or scissors):").toLowerCase();
+}
+
+function playRound(Ai, humanChoice) {
+    if (Ai == humanChoice) {
+        return "Draw";
+    }
+    else if ((Ai == "rock" && humanChoice == "scissors") ||
+             (Ai == "scissors" && humanChoice == "paper") ||
+             (Ai == "paper" && humanChoice == "rock")) {
+        computerScore++;
+        return `You lose! ${Ai} beats ${humanChoice}`;
+    } else {
+        humanScore++;
+        return `You win! ${humanChoice} beats ${Ai}`;
+    }
+}
+
+// Play 5 rounds
+for (let i = 0; i < 5; i++) {
+    getHumanChoice();
+    getComputerChoice();
+    console.log(`Round ${i+1}: ${playRound(Ai, humanChoice)}`);
+    console.log(`Human Score: ${humanScore}, Computer Score: ${computerScore}`);
+}
+
+// Final result
+if (humanScore > computerScore) {
+    console.log(`Congratulations! You won the game with a score of ${humanScore} to ${computerScore}`);
+} else if (computerScore > humanScore) {
+    console.log(`Sorry! You lost the game. The computer won with a score of ${computerScore} to ${humanScore}`);
+} else {
+    console.log(`It's a draw! Both you and the computer have a score of ${humanScore}`);
+}
+
+
+
 
     </script>
 </html>
